main.css
/*
newspaper article vibes
FULL CREDIT TO NAFISA™
OR
Color Scheme:
#E0E6FF
#676f9d
#424769
#2d3250
#f9b17a
*/

/*google fonts*/

.raleway {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}
.bebas-neue-regular {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-style: normal;
}

/*end of google fonts*/



body{
        height: 99%;
        width: 99%;
        background-color: #2d3250;
        opacity: 1;
        background-image:  linear-gradient(#424769 1.1px, transparent 1.1px), linear-gradient(to right, #424769 1.1px, #2d3250 1.1px);
        background-size: 22px 22px;
}
*{
        box-sizing: border-box;
        color: #E0E6FF;
        font-family: "Raleway", sans-serif;
        font-optical-sizing: auto;
        font-weight: 400;
        font-style: normal;
}
.banner{
        border: 0px solid #8093F1;
        border-radius: 12px;
        position: relative;
        margin-top: 0px;
        /*
        background-image: url("images/triang.png");
        background-repeat: no-repeat;
        background-size: 100% 650px;
        */
        height: 500px;
        width: 100%;
        text-align: left;
        font-size: 24px;
}

.banner p{
        font-size: 50px
}

ul {
  color: #E0E6FF;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  position: sticky;
  top: 0;
}
li {
        background-color: #424769;
        display: inline;
        float: left;
        font-size: 1.5em;
        border: 0px solid;
        border-radius: 12px;
  }
  a {
        text-decoration: none;
        color: white;
  }
  a:visited{
        color: white;
  }
  li a:hover{
        border: 0px solid;
        border-radius: 12px;

  }
  div{
        padding: 5px 16px;

        border: 0px solid;
        border-radius: 12px;
        text-align: center; 
  }
  li a {
        transition: background-color 1s;
        display: block;
        border: 0px solid;
        border-radius: 12px;
        color: white;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
  }
#logo{
        width: 200px;
        height: 200px;
        position: absolute;
        top: 50px;
        right: 260px;
}
.container{
        color: white;
  position: relative;
  border: 0px solid;
  border-radius: 12px;
  margin-top: 10px;
  padding: 20px 24px;
        background-color: #424769;
.container h2{
  font-size: 3em;
}
.container h3{
  font-size: 2em;
}
}
.wave{
        border: red 1px solid;
        font-size: 1em;
        height: 25px;
        overflow: hidden;
        width: 80%;
        position:relative;
        left: 10%;
        transition: height 4s;
        display:block;
}
#l1{
        border: 1px solid;
        background-image:repeating-linear-gradient(red, green);
}
.wave:hover{
        height:90%;
        top:1px;
        z-index:1;
}
.menu{
        position: absolute;
        top: 50px;
        left: 70px;
        font-size: 2em;
        text-shadow: 2px 2px #317873;
        font-style: oblique;
        width: 100px;
        overflow: hidden;
}
.menu a{
        color: #a0d6b4;
        text-shadow: 0px 0px ;
        font-size: 0.5em;

        padding: 1px;
        border: 1px solid red;
        display: none;
}
.menu:hover a{
        display: block;
}
.menu a:hover{
        color: yellow;
        background-color: navy;
}
.left{
        width: 48%;
        position:absolute;
        left: 5px;
        background-color: salmon;
        color: ghostwhite;
        border:2px ghostwhite;
        border-radius:5%;
        font-size:2em;
        text-align:center;
}
.right{
        width:48%;
        position: absolute;
        right:5px;
        background-color: salmon;
        color: ghostwhite;
        border:2px ghostwhite;
        border-radius:5%;
        font-size:2em;
        text-align:center;

}
.drop{
  height: 80px;
  width: 80%;
  position: relative;
  left: 10%;
  transition: height 2s;
  display: block;
  overflow: hidden;
  padding-left: 5px;
  padding-right: 5px;
}
.drop:hover{
  height: 750px;
  z-index: 1;
}
#cfu5:hover, #cfu6:hover, #cfu7:hover, #cfu12:hover{
        height:800px;
}
#cfu9:hover, #cfu10:hover{
        height:850px;
}
.active{
        background-color: #f9b17a;
        border: 0px solid #553772;
        border-radius: 12px;
  }

